Styled nav link button

--- a/BlazorView/Pages/Components/DisplayFullListing.razor
+++ b/BlazorView/Pages/Components/DisplayFullListing.razor
@@ -1,4 +1,5 @@
 ﻿@using BlazorView.Data
+@inject NavigationManager _nav
 
 <div class="fullAdvertisementWrapper" style="@FullListingStyle">
     @if (AdvertisementToShow != null)
